Integrated new db schema
