# src/openapi/scripts/emotion-analysis.yaml
@@ -21,17 +21,22 @@ paths:
             schema:
               type: object
               required:
-                - userID
-                - scriptID
+                - userId
+                - scriptId
+                - versionId
               properties:
-                userID:
+                userId:
                   type: string
                   description: The ID of the authenticated user
                   example: "JirLVB69ssMkGLUucFnLyslUXhh1"
-                scriptID:
+                scriptId:
                   type: string
                   description: The unique ID of the script to process
-                  example: "SXI3IvmP1MmLmcmq72hm"
+                  example: "2uwbKngFuSj2q733FNJ2"
+                versionId:
+                  type: string
+                  description: The unique ID of the script to process
+                  example: "Qxnog9Cd9YeththPKP5B"
       responses:
         "200":
           description: Script processed successfully
